fix hero landscape on mobile

--- a/css/queries.css
+++ b/css/queries.css
@@ -29,7 +29,7 @@
     }
 
     .hero .hero-content {
-        padding-top: 70%;
+        padding-top: 60%;
     }
 
     .header-nav {
